<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/drawer_menu_group_title_database">
        <menu>
            <item
                android:id="@+id/drawer_menu_item_synchronize"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/drawer_menu_item_synchronize" />
            <item
                android:id="@+id/drawer_menu_item_backup"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/drawer_menu_item_backup" />
            <item
                android:id="@+id/drawer_menu_item_restore"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/drawer_menu_item_restore" />
        </menu>
    </item>

    <item android:title="@string/drawer_menu_group_title_system">
        <menu>
            <item
                android:id="@+id/drawer_menu_item_change_password"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_menu_item_change_password" />
            <item
                android:id="@+id/drawer_menu_item_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_menu_item_about" />
        </menu>
    </item>

</menu>
