<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/safe_list_item_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/special_margin_micro"
        android:background="@drawable/safe_list_item_modify_ripple"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="@dimen/special_margin_mini"
            android:padding="@dimen/general_margin_mini"
            android:adjustViewBounds="true"
            android:contentDescription="@string/safe_list_item_modify_content_description"
            android:maxWidth="@dimen/app_icon_size_small"
            android:maxHeight="@dimen/app_icon_size_small"
            android:src="@drawable/modify_file" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/safe_list_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/special_margin_micro"
        android:layout_toStartOf="@id/safe_list_item_modify"
        android:background="@drawable/safe_list_item_delete_ripple"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/special_margin_mini"
            android:padding="@dimen/general_margin_mini"
            android:adjustViewBounds="true"
            android:contentDescription="@string/safe_list_item_delete_content_description"
            android:maxWidth="@dimen/app_icon_size_small"
            android:maxHeight="@dimen/app_icon_size_small"
            android:src="@drawable/delete_file" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/safe_list_item_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/special_margin_micro"
        android:background="@drawable/safe_list_item_body_ripple"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/app_icon_size_small"
            android:layout_height="@dimen/app_icon_size_small"
            android:layout_margin="@dimen/special_margin_mini"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/safe_list_item_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:adjustViewBounds="true"
                android:contentDescription="@string/safe_list_item_icon_content_description"
                android:maxWidth="@dimen/app_icon_size_small"
                android:maxHeight="@dimen/app_icon_size_small"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/safe_list_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safe_list_item_name" />

            <TextView
                android:id="@+id/safe_list_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safe_list_item_description" />
        </LinearLayout>

        <ImageView
            android:id="@+id/safe_list_item_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/special_margin_mini"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:clickable="false"
            android:contentDescription="@string/safe_list_item_more_content_description"
            android:maxWidth="@dimen/app_button_size_small"
            android:maxHeight="@dimen/app_button_size_small"
            android:src="@drawable/more" />
    </LinearLayout>

</RelativeLayout>