<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/save_item_form_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin_small"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small"
                android:layout_marginBottom="@dimen/general_margin_tiny"
                android:gravity="center_horizontal"
                android:text="@string/general_account_form_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/save_item_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin_tiny"
                    android:layout_marginEnd="@dimen/general_margin_small"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/save_item_prompt_icon"
                    android:maxWidth="@dimen/app_icon_size_medium"
                    android:minHeight="@dimen/app_icon_size_medium"
                    android:src="@drawable/general_account" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small">

                <EditText
                    android:id="@+id/save_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/save_item_prompt_name"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small">

                <EditText
                    android:id="@+id/save_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/save_item_prompt_description"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small">

                <EditText
                    android:id="@+id/save_general_account_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/general_account_prompt_website"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small">

                <EditText
                    android:id="@+id/save_general_account_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/general_account_prompt_username"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small">

                <EditText
                    android:id="@+id/save_general_account_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/general_account_prompt_password"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small">

                <EditText
                    android:id="@+id/save_general_account_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/general_account_prompt_remarks"
                    android:imeOptions="actionNext"
                    android:maxLength="2048"
                    android:nextFocusForward="@id/save_item_save_button"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start">

                    <Button
                        android:id="@+id/save_item_cancel_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/general_margin_small"
                        android:layout_marginEnd="@dimen/general_margin_tiny"
                        android:layout_marginBottom="@dimen/general_margin_small"
                        android:text="@string/save_item_prompt_cancel"
                        android:textAllCaps="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Button
                        android:id="@+id/save_item_save_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/general_margin_tiny"
                        android:layout_marginEnd="@dimen/general_margin_small"
                        android:layout_marginBottom="@dimen/general_margin_small"
                        android:text="@string/save_item_prompt_save"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_item_progress_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin_small"
                android:layout_marginLeft="@dimen/general_margin_small"
                android:layout_marginRight="@dimen/general_margin_small"
                android:layout_marginBottom="@dimen/general_margin_tiny"
                android:gravity="center_horizontal"
                android:text="@string/save_item_progress_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin_small"
                    android:layout_marginTop="@dimen/general_margin_tiny"
                    android:layout_marginEnd="@dimen/general_margin_tiny"
                    android:layout_marginBottom="@dimen/general_margin_small" />

                <TextView
                    android:id="@+id/save_item_progress_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin_tiny"
                    android:layout_marginTop="@dimen/general_margin_tiny"
                    android:layout_marginEnd="@dimen/general_margin_small"
                    android:layout_marginBottom="@dimen/general_margin_small"
                    android:text="@string/save_item_progress_processing_message" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>